<resources>
    <string name="app_name">EvaCam</string>
    <string name="borrar_imagen">Borrar</string>
    <string name="preview_foto">Preview Foto</string>
    <string name="anyo">Año</string>
    <string name="codigo_vehiculo">Matrícula</string>
    <string name="codigo">Servicio</string>
    <string name="seccion_id">Sección ID</string>
    <string name="volver">Volver</string>
    <string name="guardar_seleccion">Guardar selección</string>
    <string name="textview_conexion">Conexión de la estación:</string>
    <string name="textview_usuario">Usuario:</string>
    <string name="textview_password">Contraseña:</string>
    <string name="textview_informe">Informe:</string>
    <string name="boton_aceptar">Aceptar</string>
    <string name="solo_informe">Solo informe</string>
    <string name="informe_sin_extras">Informe sin extras</string>
    <string name="todas_las_fotos">Todas las fotos</string>
    <string name="delantera_derecha">Delantera derecha</string>
    <string name="trasera_izquierda">Trasera izquierda</string>
    <string name="enviar_fotos">Enviar fotos</string>
    <string name="bastidor">Bastidor</string>
    <string name="otras_fotografias">Otras fotografías</string>
    <string name="agregar_nueva_foto">Agregar nueva foto</string>
    <string name="cuentakm">CuentaKm</string>
</resources>